--- a/guide.html
+++ b/guide.html
@@ -5,31 +5,237 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>看电影 学英语</title>
-
+    <title>口语入门方法</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/github-markdown.css" />
     <style>
-        h1 {
-            margin-top: 24px;
-            margin-bottom: 24px;
+        .mr11 {
+            margin-right: 11px;
         }
 
-        h2 {
-            margin-top: 24px;
-            padding-bottom: 0.3em;
-            border-bottom: solid 1px #eee;
+        h2.mt {
+            margin-top: 44px;
         }
 
-        .text {
-            font-size: large;
+        .go-top {
+            position: fixed;
+            right: 11%;
+            bottom: 3%;
+        }
+
+        .markdown-body h1:first-child {
+            margin-top: 22px !important;
+        }
+
+        .markdown-body table tbody tr {
+            background-color: white !important;
         }
 
     </style>
 </head>
 
 <body>
-    <div>
-        <div>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container">
+            <a href="/" class="navbar-brand active">Vivid English</a>
+            <a href="/movie" class="navbar-toggler">Movie</a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a href="/guide" class="nav-link active">Guide</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/movie" class="nav-link">Movie</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <article class="markdown-body">
             <h1>看电影 学英语</h1>
+            <h2>一个你做得到的口语入门方法</h2>
+            <p>如果你觉得英语非常难，学起来很痛苦？<br>
+                那很可能是因为你选了一条坎坷的道路。<br>
+                学英语也可以是轻松愉快的。<br>
+                这不需要魔法，只需要做一些取舍。</p>
+            <h4>如何取舍？</h4>
+            <p>首先需要舍弃的是，让人感到痛苦的：背单词、学语法。<br>
+                这么做没问题吗？<br>
+                举个形象点例子：<br>
+                刚开始学习走路时，用不着“跑得快”，因此不会去做“速度训练”和“力量训练”。<br>
+                回到口语入门，这个阶段并不需要大量词汇和语法，因此不用专门去背单词、学语法。</p>
+            <p>不背单词、不学语法，那该做什么？</p>
+            <h4>做什么？</h4>
+            <p>什么决定了口语的好坏？<br>
+                大脑中句子的数量。</p>
+            <p>口语差的人怎么组织语言？选句型、选单词、考虑单词用法、考虑时态语态等等。<br>
+                口语好的人怎么组织语言？从大脑中找一个句子，改一两个词即可。</p>
+            <p>显然，要想练好口语，就得累积大量句子。<br>
+                但这并不容易。</p>
+            <h4>最大的困难</h4>
+            <p>大脑是非常功利的，它只喜欢做成本小且收益大的事。<br>
+                而且重复工作中，边际成本会不断增加，边际收益会不断减少。<br>
+                更糟糕的是，大脑无法正确计算这个成本，导致严重低估成本。<br>
+                “背单词”之所以很难坚持下去，原因就在此。</p>
+            <p>要累积大量句子，也要面对这个问题。<br>
+                对普通人来说，这个问题几乎是无解的。<br>
+                唯一能做的就是：严格控制成本。<br>
+                具体控制成本的方法在文章末尾，这里不做展开。</p>
+            <p>虽然这个问题非常棘手，但只要取舍得当，就不会导致失败。<br>
+                然而，真正导致失败的，往往都是一些小问题。</p>
+            <h4>失败的原因</h4>
+            <p>英语学习经常会遇到这种情况：<br>
+                学习了几十天，但发现几乎没有改善，离目标依旧那么遥远，似乎永远也做不到。<br>
+                一直看不到希望，这才是最危险的。时间久了，必定会使人放弃。</p>
+            <p>产生这个问题的原因很简单：目标太大、太模糊。<br>
+                解决方法也简单：选择小而明确的目标。</p>
+            <p>至此，小结一下本文观点，简而言之：</p>
+            <ul>
+                <li>不背单词、不学语法</li>
+                <li>累积句子</li>
+                <li>小成本</li>
+                <li>小目标</li>
+            </ul>
+            <h4>学习计划</h4>
+            <ul>
+                <li>每周看 1 部优秀的英文电影</li>
+                <li>选择 2 段有趣的对话</li>
+                <li>每天至少读 1 遍</li>
+            </ul>
+            <p>不要背诵，背诵的成本非常高。<br>
+                多读，读多了自然就能够背诵了。<br>
+                如果已经能够背诵了，则不必每天读。</p>
+            <p>可能你会觉得，按照这个计划做，根本不可能练好口语。<br>
+                其实，这个计划的目标并不在此。<br>
+                这个计划的目标是：正反馈。</p>
+            <h4>正反馈</h4>
+            <p>正反馈，就是良性循环。<br>
+                在掌握一定数量的句子后，记忆新句子会变得更加容易，即成本降低了。<br>
+                同时，日常生活中能够用到的句子也越多，即收益增加了。<br>
+                最终，收益超过成本，大脑便愿意继续这样做下去。</p>
+            <p>这时，你才真正入门了。<br>
+                你会非常渴望练习英语，你会主动去听、读、说，甚至梦里都在说英语。<br>
+                不要觉得惊讶，亲身经历。</p>
+            <p>这之后的事就简单多了。<br>
+                可以适当地增加学习内容、难度。<br>
+                也可以继续按照这个计划学习，稳步前进。<br>
+                只要做到了正反馈，学英语就会成为了一种习惯，甚至是爱好。<br>
+                之后的学习只会更加容易、更加愉快。</p>
+            <h4>需要多久？</h4>
+            <p>按照这个计划，需要多久才能做到正反馈？<br>
+                好消息是，可能只需要几个月。</p>
+            <p>这个表格大家应该都见过：</p>
+            <table>
+                <thead>
+                    <tr>
+                        <th>词汇量</th>
+                        <th>覆盖率</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>100</td>
+                        <td>50 %</td>
+                    </tr>
+                    <tr>
+                        <td>1000</td>
+                        <td>75 %</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p>最常用的 100 个单词，覆盖了大约 50% 的英文内容；<br>
+                最常用的 1000 个单词，覆盖了大约 75% 的英文内容。</p>
+            <p>这个规律对句子也适用。<br>
+                也就是说，掌握几百个常用的句子，就能应对日常生活中的大部分对话。<br>
+                虽然没法做到深入交流，但在日常对话中足够了。<br>
+                而且，只要能应对其中一部分对话，就能做到正反馈。<br>
+                也就是说，正反馈所需要的句子数量要少得多。</p>
+            <p>几百个句子，几个月时间，这个目标并不遥远，也不难做到。<br>
+                认真对待，收获会比你预期的更早到来。</p>
+            <h4>结语</h4>
+            <p>英语口语没有想象中的那么难。<br>
+                如果选择有趣的学习资料，口语学习其实是非常愉快的。<br>
+                而且，你还能因此发现一个精彩的新世界。</p>
+
+            <h2 id="学习建议" class="mt">学习建议</h2>
+            <p>万事开头难！<br>
+                真正困难的，是在刚开始的时候。<br>
+                虽然文中的方法很简单，但是，说起来容易，做起来难。<br>
+                因此，请认真对待下面这些建议。</p>
+            <h4>选择有趣的学习资料</h4>
+            <p>不追求有难度、有深度的内容。<br>
+                内容越常用，价值越高。</p>
+            <h4>不急于求成</h4>
+            <p>不求多、不图快。<br>
+                这个计划看起来成本很低，但实际成本并不低。<br>
+                特别是如果英语基础较差，一个月后，每天要读 10+ 对话。<br>
+                这个成本已经非常高了。</p>
+            <h4>不面面俱到</h4>
+            <p>不背单词：不要单独去背单词。<br>
+                不学语法：不要专门去学语法。<br>
+                单词和语法在这里不是重点。<br>
+                知道单词在句子中的意思即可，不必深究。<br>
+                不要去分析语法，记的句子多了自然就会了。</p>
+            <h4>组队学习</h4>
+            <p>初学者经常会遇到下面这些问题：</p>
+            <ul>
+                <li>没有地方练习口语</li>
+                <li>没法获得帮助</li>
+                <li>不知道从哪开始</li>
+            </ul>
+            <p>这些问题不难，加入一个英语学习团队就能解决。<br>
+                相互帮助、相互鼓励、相互督促，这些对初学者非常重要。</p>
+            <h4>控制团队人数</h4>
+            <p>人数越多，效果越差。<br>
+                在 5 人的团队里偷懒，很容易被发现。<br>
+                但在 100 人的团队里偷懒，则很难被发现。</p>
+            <h4>培养习惯</h4>
+            <p>如果你有早睡早起的习惯，那么早起的成本很低。<br>
+                反之，早起的成本会非常高。<br>
+                因此，养成一个习惯，将会极大降低成本。</p>
+            <h2>常见问题</h2>
+            <h4>为什么不学《老友记》、《权利游戏》这些作品？</h4>
+            <p>如果一篇文章中的生词很多，那么读起来肯定不愉快。<br>
+                对影视作品也一样。<br>
+                大部分中国人的口语水平还不及有美国小学生，<br>
+                去学那些有深度的作品，就相当于：<br>
+                走都还没学会，就开始学跑。</p>
+            <h4>觉得那些对话很无趣啊，怎么办？</h4>
+            <p>一定要先看电影熟悉剧情。<br>
+                如果不熟悉剧情，那么对话中的人物形象会是冷冰冰的，<br>
+                缺少情景，对话内容也会变得平平淡淡。<br>
+                这当然就“无趣”了！<br>
+                熟悉剧情，不仅能加深印象，还能减少遗忘。</p>
+
+            <h2 id="工具" class="mt">工具</h2>
+            <h4>老外聊天群</h4>
+            <ul>
+                <li><a href="https://t.me/chatting_international_friends" target="_blank">English Club</a></li>
+                <li><a href="https://t.me/english_world_chatting" target="_blank">English World</a></li>
+            </ul>
+            <h4>电影资料库</h4>
+            <ul>
+                <li><a href="https://movie.douban.com/tag/" target="_blank">豆瓣</a></li>
+                <li><a href="https://www.imdb.com/feature/genre/" target="_blank">IMDB</a></li>
+            </ul>
+            <h4>翻译工具</h4>
+            <ul>
+                <li><a href="https://chrome.google.com/webstore/detail/ikhdkkncnoglghljlkmcimlnlhkeamad" target="_blank">Chrome</a></li>
+                <li><a href="https://addons.mozilla.org/zh-CN/firefox/addon/hcfy/" target="_blank">FireFox</a></li>
+            </ul>
+        </article>
+
+        <footer class="text-center" style="margin: 33px;">
+            <a href="https://t.me/VividEnglish" target="_blank" class="mr11">Telegram</a>
+            <a href="https://space.bilibili.com/391782249" target="_blank" class="mr11">Bilibili</a>
+        </footer>
+
+        <div class="go-top">
+            <button class="btn btn-outline-primary rounded-pill" onclick="window.scrollTo(0, 0)">
+                Top
+            </button>
         </div>
     </div>
 </body>
