--- a/guide.html
+++ b/guide.html
@@ -105,8 +105,7 @@
                 <li>每天至少读 1 遍</li>
             </ul>
             <p>不要背诵，背诵的成本非常高。<br>
-                多读，读多了自然就能够背诵了。<br>
-                如果已经能够背诵了，则不必每天读。</p>
+                多读，读多了自然就能够背诵了。</p>
             <p>可能你会觉得，按照这个计划做，根本不可能练好口语。<br>
                 其实，这个计划的目标并不在此。<br>
                 这个计划的目标是：正反馈。</p>
@@ -125,7 +124,7 @@
                 之后的学习只会更加容易、更加愉快。</p>
             <h4>需要多久？</h4>
             <p>按照这个计划，需要多久才能做到正反馈？<br>
-                好消息是，可能只需要几个月。</p>
+                好消息是，只需要几个月。</p>
             <p>这个表格大家应该都见过：</p>
             <table>
                 <thead>
@@ -178,6 +177,11 @@
                 单词和语法在这里不是重点。<br>
                 知道单词在句子中的意思即可，不必深究。<br>
                 不要去分析语法，记的句子多了自然就会了。</p>
+            <h4>熟悉剧情</h4>
+            <p>一定要先看电影熟悉剧情。<br>
+                如果不熟悉剧情，那么对话中的人物形象会是冷冰冰的，<br>
+                缺少情景，对话内容也会变得平平淡淡。<br>
+                熟悉剧情，不仅能加深印象，还能减少遗忘。</p>
             <h4>组队学习</h4>
             <p>初学者经常会遇到下面这些问题：</p>
             <ul>
@@ -202,12 +206,6 @@
                 大部分中国人的口语水平还不及有美国小学生，<br>
                 去学那些有深度的作品，就相当于：<br>
                 走都还没学会，就开始学跑。</p>
-            <h4>觉得那些对话很无趣啊，怎么办？</h4>
-            <p>一定要先看电影熟悉剧情。<br>
-                如果不熟悉剧情，那么对话中的人物形象会是冷冰冰的，<br>
-                缺少情景，对话内容也会变得平平淡淡。<br>
-                这当然就“无趣”了！<br>
-                熟悉剧情，不仅能加深印象，还能减少遗忘。</p>
 
             <h2 id="工具" class="mt">工具</h2>
             <h4>老外聊天群</h4>
