--- a/imdb/index.html
+++ b/imdb/index.html
@@ -1,89 +1,23 @@
 <!doctype html>
 <html data-n-head-ssr>
   <head>
-    <title>3D 动画电影</title><meta data-n-head="ssr" charset="utf-8"><meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1"><meta data-n-head="ssr" data-hid="description" name="description" content="interesting moments from 3D animation movies"><base href="/"><link data-n-head="ssr" rel="icon" type="image/x-icon" href="favicon.ico"><link data-n-head="ssr" rel="stylesheet" href="css/bootstrap.min.css"><link rel="preload" href="/_nuxt/93608cd.js" as="script"><link rel="preload" href="/_nuxt/154ebd4.js" as="script"><link rel="preload" href="/_nuxt/7634e26.js" as="script"><link rel="preload" href="/_nuxt/971e9a5.js" as="script"><link rel="preload" href="/_nuxt/d5eb139.js" as="script"><style data-vue-ssr-id="3e7ab538:0 3191d5ad:0">[v-cloak]{display:none}.inline,.inline div{display:inline-block}.m011{margin:11%}.m11{margin:11px}.mb11,.mtb11{margin-bottom:11px}.mtb11{margin-top:11px}.mr11{margin-right:11px}.mt11{margin-top:11px}.mtb5{margin-top:5px;margin-bottom:5px}.go-top{position:fixed;right:11%;bottom:3%}.icon-line{vertical-align:-.5em}.color-ccc{color:#ccc}.color-888{color:#888}.text-large{font-size:large}.navbar-nav.ml-auto .dropdown-menu{min-width:8rem}.wa{width:auto}.nuxt-progress{position:fixed;top:0;left:0;right:0;height:2px;width:0;opacity:1;transition:width .1s,opacity .4s;background-color:#000;z-index:999999}.nuxt-progress.nuxt-progress-notransition{transition:none}.nuxt-progress-failed{background-color:red}</style>
+    <title>3D 动画电影</title><meta data-n-head="ssr" charset="utf-8"><meta data-n-head="ssr" name="viewport" content="width=device-width,initial-scale=1"><meta data-n-head="ssr" data-hid="description" name="description" content="interesting moments from 3D animation movies"><base href="/"><link data-n-head="ssr" rel="icon" type="image/x-icon" href="favicon.ico"><link data-n-head="ssr" rel="stylesheet" href="css/bootstrap.min.css"><link rel="preload" href="/_nuxt/9ec8ba0.js" as="script"><link rel="preload" href="/_nuxt/154ebd4.js" as="script"><link rel="preload" href="/_nuxt/7634e26.js" as="script"><link rel="preload" href="/_nuxt/861b905.js" as="script"><link rel="preload" href="/_nuxt/903f4c2.js" as="script"><style data-vue-ssr-id="3e7ab538:0 3191d5ad:0">[v-cloak]{display:none}.inline,.inline div{display:inline-block}.m011{margin:11%}.m11{margin:11px}.mb11,.mtb11{margin-bottom:11px}.mtb11{margin-top:11px}.mr11{margin-right:11px}.mt11{margin-top:11px}.mtb5{margin-top:5px;margin-bottom:5px}.go-top{position:fixed;right:11%;bottom:3%}.icon-line{vertical-align:-.5em}.color-ccc{color:#ccc}.color-888{color:#888}.text-large{font-size:large}.navbar-nav.ml-auto .dropdown-menu{min-width:8rem}.wa{width:auto}.nuxt-progress{position:fixed;top:0;left:0;right:0;height:2px;width:0;opacity:1;transition:width .1s,opacity .4s;background-color:#000;z-index:999999}.nuxt-progress.nuxt-progress-notransition{transition:none}.nuxt-progress-failed{background-color:red}</style>
   </head>
   <body>
-    <div data-server-rendered="true" id="__nuxt"><!----><div id="__layout"><div><nav class="navbar navbar-expand-lg navbar-dark bg-primary"><div class="container"><a href="/" class="navbar-brand active">Vivid English</a> <button type="button" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button> <div class="collapse navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a href="/guide.html" class="nav-link">Guide</a></li> <li class="nav-item"><a href="/movie" class="nav-link">Movie</a></li> <li class="nav-item"><a href="/scene" class="nav-link">Scene</a></li> <li class="nav-item"><a href="/star" class="nav-link">Star</a></li> <li class="nav-item"><a href="/imdb" aria-current="page" class="nav-link nuxt-link-exact-active active">IMDB</a></li></ul> <!----></div></div></nav> <main class="container"><div><div class="m11"><h1 class="inline mr11">3D 动画电影</h1> <select class="form-control inline wa"><option selected value="2020">2020</option><option value="2019">2019</option><option value="2018">2018</option><option value="2017">2017</option><option value="2016">2016</option><option value="2015">2015</option><option value="2014">2014</option><option value="2013">2013</option><option value="2012">2012</option><option value="2011">2011</option><option value="2010">2010</option><option value="2009">2009</option><option value="2008">2008</option><option value="2007">2007</option><option value="2006">2006</option><option value="2005">2005</option><option value="2004">2004</option><option value="2003">2003</option><option value="2002">2002</option><option value="2001">2001</option><option value="2000">2000</option></select></div> <div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/30401849" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMTZlYzk3NzQtMmViYS00YWZmLTk5ZTEtNWE0NGVjM2MzYWU1XkEyXkFqcGdeQXVyNDg4NjY5OTQ@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/30401849" target="_blank">
-                    1/2的魔法
-                </a></h2> <div><a href="https://www.imdb.com/title/tt7146812" target="_blank">
-                    Onward
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/25905044" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMDk5Yzc4NzMtODUwOS00NTdhLTg2MjEtZTkzZjc0ZWE2MzAwXkEyXkFqcGdeQXVyMTA3MTA4Mzgw._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/25905044" target="_blank">
-                    刺猬索尼克
-                </a></h2> <div><a href="https://www.imdb.com/title/tt3794354" target="_blank">
-                    Sonic the Hedgehog
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/25908846" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BZTJmODM0MDQtMTRjYy00YWZjLThjODItMzQ5N2I2NDBjYzA1XkEyXkFqcGdeQXVyMDA4NzMyOA@@._V1_UY98_CR3,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/25908846" target="_blank">
-                    史酷比狗
-                </a></h2> <div><a href="https://www.imdb.com/title/tt3152592" target="_blank">
-                    Scoob!
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/26985839" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMTI5NmViY2YtNDk5NC00NjY2LWFlNGYtOGEwNzY1MTZmMjFmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/26985839" target="_blank">
-                    魔发精灵2
-                </a></h2> <div><a href="https://www.imdb.com/title/tt6587640" target="_blank">
-                    Trolls World Tour
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/27062059" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BZGNlMzljOWEtMjdiYS00ZjQwLTg2M2UtMTYwNDgyZjQ4MDk5XkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/27062059" target="_blank">
-                    威洛比家的孩子们
-                </a></h2> <div><a href="https://www.imdb.com/title/tt5206260" target="_blank">
-                    The Willoughbys
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/30141681" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BNTI0ZjVhM2ItMmFkOS00ZmFiLTg4NGQtODJjNTZmMDYxMWMyXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/30141681" target="_blank">
-                    飞奔去月球
-                </a></h2> <div><a href="https://www.imdb.com/title/tt7488208" target="_blank">
-                    Over the Moon
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/26662159" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BODIwMmQxNDktOWZjZC00NWI4LTg1NjktMGViOTE4ZTA4ZGY5XkEyXkFqcGdeQXVyNjg5MjU3NjE@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/26662159" target="_blank">
-                    海绵宝宝：营救大冒险
-                </a></h2> <div><a href="https://www.imdb.com/title/tt4823776" target="_blank">
-                    The SpongeBob Movie: Sponge on the Run
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/26981368" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BZWY3OTNhNWUtMDk2My00ZGVhLWE5ODQtM2NkOTZiMWM2MGY2XkEyXkFqcGdeQXVyNjMwMzc3MjE@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/26981368" target="_blank">
-                    独一无二的伊万
-                </a></h2> <div><a href="https://www.imdb.com/title/tt3661394" target="_blank">
-                    The One and Only Ivan
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/24298954" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BNGE1NjMzMjAtNDJiNi00YjE1LWJmN2QtOGZmMmJhNmQ3OTBiXkEyXkFqcGdeQXVyMDM2NDM2MQ@@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/24298954" target="_blank">
-                    疯狂原始人2
-                </a></h2> <div><a href="https://www.imdb.com/title/tt2850386" target="_blank">
-                    The Croods: A New Age
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/35155106" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMmY1YjdiYjgtOWJlNi00OTJjLTg0YTAtNGU0NDlkYWI0NDUwXkEyXkFqcGdeQXVyNzQ3MTA4MDk@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/35155106" target="_blank">
-                    无畏战士
-                </a></h2> <div><a href="https://www.imdb.com/title/tt8675288" target="_blank">
-                    Fearless
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/35030774" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BY2QyZTJmZTMtM2Q3Zi00NjUyLTk5NzctOTg0MjI4OWEwYjg3XkEyXkFqcGdeQXVyNzU3NjUxMzE@._V1_UY98_CR3,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/35030774" target="_blank">
-                    乐高DC沙赞：魔法与怪物
-                </a></h2> <div><a href="https://www.imdb.com/title/tt12093878" target="_blank">
-                    LEGO DC: Shazam - Magic & Monsters
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/34966007" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BYmRiYTM3ZGMtNzA1Yy00OWQ1LWE2ZGEtZTRiYzYyZDZjYWYwXkEyXkFqcGdeQXVyMjMwODE4ODI@._V1_UY98_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/34966007" target="_blank">
-                    纯种狼
-                </a></h2> <div><a href="https://www.imdb.com/title/tt8774798" target="_blank">
-                    100% Wolf
-                </a></div> <div>
-                2020
-            </div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/35081498" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BOTc5OGUxYzktZGZkYy00ODBlLThhYTQtNDExMGE5YTFhNDk2XkEyXkFqcGdeQXVyMTAyNjY3OTM@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/35081498" target="_blank">
-                    丛林节拍大电影
-                </a></h2> <div><a href="https://www.imdb.com/title/tt12139700" target="_blank">
-                    Jungle Beat: The Movie
-                </a></div> <div>
-                2020
-            </div></div></div></div></main> <div class="go-top"><button class="btn btn-outline-primary rounded-pill">
+    <div data-server-rendered="true" id="__nuxt"><!----><div id="__layout"><div><nav class="navbar navbar-expand-lg navbar-dark bg-primary"><div class="container"><a href="/" class="navbar-brand active">Vivid English</a> <button type="button" class="navbar-toggler"><span class="navbar-toggler-icon"></span></button> <div class="collapse navbar-collapse"><ul class="navbar-nav mr-auto"><li class="nav-item"><a href="/guide.html" class="nav-link">Guide</a></li> <li class="nav-item"><a href="/movie" class="nav-link">Movie</a></li> <li class="nav-item"><a href="/scene" class="nav-link">Scene</a></li> <li class="nav-item"><a href="/star" class="nav-link">Star</a></li> <li class="nav-item"><a href="/imdb" aria-current="page" class="nav-link nuxt-link-exact-active active">IMDB</a></li></ul> <!----></div></div></nav> <main class="container"><div><div class="m11"><h1 class="inline mr11">3D 动画电影</h1> <select class="form-control inline wa"><option selected value="2021">2021</option><option value="2020">2020</option><option value="2019">2019</option><option value="2018">2018</option><option value="2017">2017</option><option value="2016">2016</option><option value="2015">2015</option><option value="2014">2014</option><option value="2013">2013</option><option value="2012">2012</option><option value="2011">2011</option><option value="2010">2010</option><option value="2009">2009</option><option value="2008">2008</option><option value="2007">2007</option><option value="2006">2006</option><option value="2005">2005</option><option value="2004">2004</option><option value="2003">2003</option><option value="2002">2002</option><option value="2001">2001</option><option value="2000">2000</option></select></div> <div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/26642033" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BYjZkNzM0MDItZGQ0Zi00N2MzLTlhM2MtNjJlMTczZDBkNWUxXkEyXkFqcGdeQXVyODk4OTc3MTY@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/26642033" target="_blank">
+                    小黄人大眼萌：神偷奶爸前传
+                </a></h2> <div><a href="https://www.imdb.com/title/tt5113044" target="_blank">
+                    Minions: The Rise of Gru
+                </a></div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/27056396" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BMGRhY2FhMjctM2I5ZC00NDEzLTk5NGYtOWRmMjc4N2IxZDdhXkEyXkFqcGdeQXVyNDg1MjQ2MzQ@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/27056396" target="_blank">
+                    宝贝老板2
+                </a></h2> <div><a href="https://www.imdb.com/title/tt6932874" target="_blank">
+                    The Boss Baby: Family Business
+                </a></div></div></div><div class="row"><div class="col-12"><hr></div> <div align="right" class="col-3"><a href="https://movie.douban.com/subject/34804147" target="_blank"><img src="https://m.media-amazon.com/images/M/MV5BN2UxNmIxYmItMDBlMi00MzRiLWE0MzEtNjBiOTA0MWE0NjZmXkEyXkFqcGdeQXVyNjU1NDM1MjQ@._V1_UX67_CR0,0,67,98_AL_.jpg"></a></div> <div class="col-9"><h2><a href="https://movie.douban.com/subject/34804147" target="_blank">
+                    寻龙传说
+                </a></h2> <div><a href="https://www.imdb.com/title/tt5109280" target="_blank">
+                    Raya and the Last Dragon
+                </a></div></div></div></div></main> <div class="go-top"><button class="btn btn-outline-primary rounded-pill">
         Top
-    </button></div> <footer class="text-center" style="margin:33px"><a href="https://t.me/VividEnglish" target="_blank" class="mr11">Telegram</a> <a href="https://space.bilibili.com/391782249" target="_blank" class="mr11">Bilibili</a></footer></div></div></div><script>window.__NUXT__={layout:"default",data:[{}],fetch:[],error:null,serverRendered:!0,routePath:"/imdb",config:{}}</script><script src="/_nuxt/93608cd.js" defer></script><script src="/_nuxt/d5eb139.js" defer></script><script src="/_nuxt/154ebd4.js" defer></script><script src="/_nuxt/7634e26.js" defer></script><script src="/_nuxt/971e9a5.js" defer></script>
+    </button></div> <footer class="text-center" style="margin:33px"><a href="https://t.me/VividEnglish" target="_blank" class="mr11">Telegram</a> <a href="https://space.bilibili.com/391782249" target="_blank" class="mr11">Bilibili</a></footer></div></div></div><script>window.__NUXT__={layout:"default",data:[{}],fetch:[],error:null,serverRendered:!0,routePath:"/imdb",config:{}}</script><script src="/_nuxt/9ec8ba0.js" defer></script><script src="/_nuxt/903f4c2.js" defer></script><script src="/_nuxt/154ebd4.js" defer></script><script src="/_nuxt/7634e26.js" defer></script><script src="/_nuxt/861b905.js" defer></script>
   </body>
 </html>
