--- a/guide.html
+++ b/guide.html
@@ -62,15 +62,6 @@
                 </p>
                 <h4>如何取舍？</h4>
                 <p>
-                    首先需要舍弃的是，让人感到痛苦的：背单词、学语法。<br />
-                    这么做没问题吗？<br />
-                    举个形象点例子：<br />
-                    刚开始学习走路时，用不着“跑得快”，因此不会去做“速度训练”和“力量训练”。<br />
-                    回到口语入门，这个阶段并不需要大量词汇和语法，因此不用专门去背单词、学语法。
-                </p>
-                <p>不背单词、不学语法，那该做什么？</p>
-                <h4>做什么？</h4>
-                <p>
                     什么决定了口语的好坏？<br />
                     大脑中句子的数量。
                 </p>
@@ -86,36 +77,14 @@
                 <p>
                     大脑是非常功利的，它只喜欢做成本小且收益大的事。<br />
                     而且重复工作中，边际成本会不断增加，边际收益会不断减少。<br />
-                    更糟糕的是，大脑无法正确计算这个成本，导致严重低估成本。<br />
+                    更糟的是，大脑无法正确计算这个成本，导致严重低估成本。<br />
                     “背单词”之所以很难坚持下去，原因就在此。
                 </p>
                 <p>
                     要累积大量句子，也要面对这个问题。<br />
                     对普通人来说，这个问题几乎是无解的。<br />
-                    唯一能做的就是：严格控制成本。<br />
-                    具体控制成本的方法在文章末尾，这里不做展开。
+                    唯一能做的就是：学会严格控制成本，让成本与收益相当。
                 </p>
-                <p>
-                    虽然这个问题非常棘手，但只要取舍得当，就不会导致失败。<br />
-                    然而，真正导致失败的，往往都是一些小问题。
-                </p>
-                <h4>失败的原因</h4>
-                <p>
-                    英语学习经常会遇到这种情况：<br />
-                    学习了几十天，但发现几乎没有改善，离目标依旧那么遥远，似乎永远也做不到。<br />
-                    一直看不到希望，这才是最危险的。时间久了，必定会使人放弃。
-                </p>
-                <p>
-                    产生这个问题的原因很简单：目标太大、太模糊。<br />
-                    解决方法也简单：选择小而明确的目标。
-                </p>
-                <p>至此，小结一下本文观点，简而言之：</p>
-                <ul>
-                    <li>不背单词、不学语法</li>
-                    <li>累积句子</li>
-                    <li>小成本</li>
-                    <li>小目标</li>
-                </ul>
                 <h4>学习计划</h4>
                 <ul>
                     <li>每周看 1 部优秀的英文电影</li>
@@ -139,21 +108,14 @@
                     最终，收益超过成本，大脑便愿意继续这样做下去。
                 </p>
                 <p>
-                    这时，你才真正入门了。<br />
+                    这时你才真正入门了。<br />
                     你会非常渴望练习英语，你会主动去听、读、说，甚至梦里都在说英语。<br />
                     不要觉得惊讶，亲身经历。
-                </p>
-                <p>
-                    这之后的事就简单多了。<br />
-                    可以适当地增加学习内容、难度。<br />
-                    也可以继续按照这个计划学习，稳步前进。<br />
-                    只要做到了正反馈，学英语就会成为了一种习惯，甚至是爱好。<br />
-                    之后的学习只会更加容易、更加愉快。
                 </p>
                 <h4>需要多久？</h4>
                 <p>
                     按照这个计划，需要多久才能做到正反馈？<br />
-                    好消息是，只需要几个月。
+                    好消息是，可能只需要几个月。
                 </p>
                 <p>这个表格大家应该都见过：</p>
                 <table>
@@ -219,7 +181,7 @@
                 <p>
                     不背单词：不要单独去背单词。<br />
                     不学语法：不要专门去学语法。<br />
-                    单词和语法在这里不是重点。<br />
+                    单词和语法在这个阶段不是重点。<br />
                     知道单词在句子中的意思即可，不必深究。<br />
                     不要去分析语法，记的句子多了自然就会了。
                 </p>
@@ -229,23 +191,6 @@
                     如果不熟悉剧情，那么对话中的人物形象会是冷冰冰的，<br />
                     缺少情景，对话内容也会变得平平淡淡。<br />
                     熟悉剧情，不仅能加深印象，还能减少遗忘。
-                </p>
-                <h4>组队学习</h4>
-                <p>初学者经常会遇到下面这些问题：</p>
-                <ul>
-                    <li>没有地方练习口语</li>
-                    <li>没法获得帮助</li>
-                    <li>不知道从哪开始</li>
-                </ul>
-                <p>
-                    这些问题不难，加入一个英语学习团队就能解决。<br />
-                    相互帮助、相互鼓励、相互督促，这些对初学者非常重要。
-                </p>
-                <h4>控制团队人数</h4>
-                <p>
-                    人数越多，效果越差。<br />
-                    在 5 人的团队里偷懒，很容易被发现。<br />
-                    但在 100 人的团队里偷懒，则很难被发现。
                 </p>
                 <h4>培养习惯</h4>
                 <p>
@@ -270,30 +215,44 @@
                         <a
                             href="https://t.me/chatting_international_friends"
                             target="_blank"
-                            >English Club</a
                         >
+                            English Club
+                        </a>
                     </li>
                     <li>
                         <a
                             href="https://t.me/english_world_chatting"
                             target="_blank"
-                            >English World</a
                         >
+                            English World
+                        </a>
                     </li>
                 </ul>
                 <h4>电影资料库</h4>
                 <ul>
                     <li>
-                        <a href="https://movie.douban.com/tag/" target="_blank"
-                            >豆瓣</a
-                        >
+                        <a href="https://movie.douban.com/tag/" target="_blank">
+                            豆瓣
+                        </a>
                     </li>
                     <li>
                         <a
                             href="https://www.imdb.com/feature/genre/"
                             target="_blank"
-                            >IMDB</a
                         >
+                            IMDB
+                        </a>
+                    </li>
+                </ul>
+                <h4>电影字幕</h4>
+                <ul>
+                    <li>
+                        <a
+                            href="https://subscene.com/"
+                            target="_blank"
+                        >
+                            Subscene
+                        </a>
                     </li>
                 </ul>
                 <h4>翻译工具</h4>
@@ -302,29 +261,36 @@
                         <a
                             href="https://chrome.google.com/webstore/detail/ikhdkkncnoglghljlkmcimlnlhkeamad"
                             target="_blank"
-                            >Chrome</a
                         >
+                            Chrome
+                        </a>
                     </li>
                     <li>
                         <a
                             href="https://addons.mozilla.org/zh-CN/firefox/addon/hcfy/"
                             target="_blank"
-                            >FireFox</a
                         >
+                            FireFox
+                        </a>
                     </li>
                 </ul>
             </article>
 
             <footer class="text-center" style="margin: 33px">
-                <a href="https://t.me/VividEnglish" target="_blank" class="mr11"
-                    >Telegram</a
+                <a
+                    href="https://t.me/VividEnglish"
+                    target="_blank"
+                    class="mr11"
                 >
+                    Telegram
+                </a>
                 <a
                     href="https://space.bilibili.com/391782249"
                     target="_blank"
                     class="mr11"
-                    >Bilibili</a
                 >
+                    Bilibili
+                </a>
             </footer>
 
             <div class="go-top">
