--- a/guide.html
+++ b/guide.html
@@ -213,18 +213,18 @@
                 <ul>
                     <li>
                         <a
-                            href="https://t.me/chatting_international_friends"
+                            href="https://t.me/international_english_chattings"
                             target="_blank"
                         >
-                            English Club
+                            International friends club
                         </a>
                     </li>
                     <li>
                         <a
-                            href="https://t.me/english_world_chatting"
+                            href="https://t.me/chatting_international_friends"
                             target="_blank"
                         >
-                            English World
+                            English Club
                         </a>
                     </li>
                 </ul>
