--- a/guide.html
+++ b/guide.html
@@ -12,10 +12,6 @@
                 margin-right: 11px;
             }
 
-            h2.mt {
-                margin-top: 44px;
-            }
-
             .go-top {
                 position: fixed;
                 right: 11%;
@@ -28,6 +24,10 @@
 
             .markdown-body table tbody tr {
                 background-color: white !important;
+            }
+
+            h2.mt {
+                margin-top: 44px;
             }
         </style>
     </head>
@@ -55,18 +55,11 @@
                 <h1>看电影 学英语</h1>
                 <h2>一个你做得到的口语入门方法</h2>
                 <p>
-                    如果你觉得英语非常难，学起来很痛苦？<br />
-                    那很可能是因为你选了一条坎坷的道路。<br />
-                    学英语也可以是轻松愉快的。<br />
-                    这不需要魔法，只需要做一些取舍。
-                </p>
-                <h4>如何取舍？</h4>
-                <p>
                     什么决定了口语的好坏？<br />
                     大脑中句子的数量。
                 </p>
                 <p>
-                    口语差的人怎么组织语言？选句型、选单词、考虑单词用法、考虑时态语态等等。<br />
+                    口语差的人怎么组织语言？选单词、选句型、考虑单词用法、考虑时态语态等等。<br />
                     口语好的人怎么组织语言？从大脑中找一个句子，改一两个词即可。
                 </p>
                 <p>
@@ -83,7 +76,16 @@
                 <p>
                     要累积大量句子，也要面对这个问题。<br />
                     对普通人来说，这个问题几乎是无解的。<br />
-                    唯一能做的就是：学会严格控制成本，让成本与收益相当。
+                    唯一能做的就是：学会严格控制成本，让成本与收益相当。<br />
+                    如果你觉得学英语是痛苦的，那说明成本已经远远超过收益了。
+                </p>
+                <p>
+                    单词、语法、口语，每一项的学习成本都非常大。<br />
+                    如果你想同时学习这些，请前往
+                    <a href="https://www.zhihu.com/topic/19553528/top-answers">知乎</a> 。<br />
+                    如果你能够认识到自己能力的不足，<br />
+                    并且愿意放弃背单词学语法这些应试教育中的方法，<br />
+                    那不妨试试这个对普通人友好的学习计划。
                 </p>
                 <h4>学习计划</h4>
                 <ul>
@@ -93,7 +95,7 @@
                 </ul>
                 <p>
                     不要背诵，背诵的成本非常高。<br />
-                    多读，读多了自然就能够背诵了。
+                    多读，读多了自然就记住了。
                 </p>
                 <p>
                     可能你会觉得，按照这个计划做，根本不可能练好口语。<br />
