--- a/guide.html
+++ b/guide.html
@@ -83,8 +83,8 @@
                     单词、语法、口语，每一项的学习成本都非常大。<br />
                     如果你想同时学习这些，请前往
                     <a href="https://www.zhihu.com/topic/19553528/top-answers">知乎</a> 。<br />
-                    如果你能够认识到自己能力的不足，<br />
-                    并且愿意放弃背单词学语法这些应试教育中的方法，<br />
+                    如果你能够认识到自己的能力不足以承担这些成本，<br />
+                    并且愿意放弃“背单词学语法”这些应试教育中的方法，<br />
                     那不妨试试这个对普通人友好的学习计划。
                 </p>
                 <h4>学习计划</h4>
