--- a/cost.html
+++ b/cost.html
@@ -40,6 +40,7 @@
                         <th>6</th>
                         <th>7</th>
                         <th>8</th>
+                        <th>9</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -53,6 +54,7 @@
                         <td></td>
                         <td></td>
                         <td class="blue">10</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>2</td>
@@ -64,6 +66,7 @@
                         <td></td>
                         <td></td>
                         <td></td>
+                        <td class="blue">10</td>
                     </tr>
                     <tr>
                         <td>3</td>
@@ -73,6 +76,7 @@
                         <td class="blue">10</td>
                         <td></td>
                         <td class="blue">10</td>
+                        <td></td>
                         <td></td>
                         <td></td>
                     </tr>
@@ -86,6 +90,7 @@
                         <td></td>
                         <td class="blue">10</td>
                         <td></td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>5</td>
@@ -97,6 +102,7 @@
                         <td class="blue">10</td>
                         <td></td>
                         <td class="blue">10</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>6</td>
@@ -108,6 +114,7 @@
                         <td class="green">10</td>
                         <td class="blue">10</td>
                         <td></td>
+                        <td class="blue">10</td>
                     </tr>
                     <tr>
                         <td>7</td>
@@ -119,9 +126,23 @@
                         <td></td>
                         <td class="green">10</td>
                         <td class="blue">10</td>
+                        <td></td>
                     </tr>
                     <tr>
                         <td>8</td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td class="green">10</td>
+                        <td class="blue">10</td>
+                    </tr>
+                    <tr>
+                        <td>9</td>
+                        <td></td>
                         <td></td>
                         <td></td>
                         <td></td>
@@ -142,6 +163,7 @@
                         <td>30</td>
                         <td>30</td>
                         <td>30</td>
+                        <td class="red">40</td>
                         <td class="red">40</td>
                     </tr>
                 </tfoot>
