--- a/guide.html
+++ b/guide.html
@@ -205,7 +205,7 @@
                 <p>
                     如果一篇文章中的生词很多，那么读起来肯定不愉快。<br />
                     对影视作品也一样。<br />
-                    大部分中国人的口语水平还不及有美国小学生，<br />
+                    大部分中国人的口语水平还不及美国小学生，<br />
                     去学那些有深度的作品，就相当于：<br />
                     走都还没学会，就开始学跑。
                 </p>
@@ -261,7 +261,7 @@
                 <ul>
                     <li>
                         <a
-                            href="https://chrome.google.com/webstore/detail/ikhdkkncnoglghljlkmcimlnlhkeamad"
+                            href="https://chrome.google.com/webstore/detail/odfgigmpkhhhieicogijogfobfipijjh"
                             target="_blank"
                         >
                             Chrome
@@ -269,7 +269,15 @@
                     </li>
                     <li>
                         <a
-                            href="https://addons.mozilla.org/zh-CN/firefox/addon/hcfy/"
+                            href="https://microsoftedge.microsoft.com/addons/detail/ogleeipbbcokpeabliinildngejmdneg"
+                            target="_blank"
+                        >
+                            Edge
+                        </a>
+                    </li>
+                    <li>
+                        <a
+                            href="https://addons.mozilla.org/zh-CN/firefox/addon/dream_translate/"
                             target="_blank"
                         >
                             FireFox
@@ -285,13 +293,6 @@
                     class="mr11"
                 >
                     Telegram
-                </a>
-                <a
-                    href="https://space.bilibili.com/391782249"
-                    target="_blank"
-                    class="mr11"
-                >
-                    Bilibili
                 </a>
             </footer>
 
